src/objects/CSM_R_D_Form__c.object
<CustomObject>
    <description>As Per CSM-2841</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>As Per CSM-2841</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R_D_Form</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>As per CSM-2841</description>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QC Quality Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Issues__c</fullName>
        <description>As per csm-2841</description>
        <label>Number Of Issues</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remediation_Points__c</fullName>
        <description>AS Per CSM-2841</description>
        <label>Remediation Points</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Budget Disclosed</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Range Chart</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Courier Info/email</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing CRM</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Date</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Form</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Image</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Keys/Definitions</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Kit Type/Code</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Logo</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Page Number</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing PM/PC</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Project Code</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Protocol</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Reference</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Region</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Sponsor</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Sponsor Name</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Tests/Visits</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Missing Version</fullName>
                </value>
                <value>
                    <fullName>Materials information included</fullName>
				</value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>As per CSM-2841</description>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contact Details</fullName>
                </value>
                <value>
                    <fullName>Cover Page</fullName>
                </value>
                <value>
                    <fullName>Filename</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>LES</fullName>
                </value>
                <value>
                    <fullName>Packaging/Supplies</fullName>
                </value>
                <value>
                    <fullName>Re-Supply  order Form</fullName>
                </value>
                <value>
                    <fullName>Testing and Processing</fullName>
                </value>
                <value>
                    <fullName>Withdrawal of Consent Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSM R&amp;D Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RnD Form-{0000}</displayFormat>
        <label>R&amp;D Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM R&amp;D Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>